# bmbp_lib_ui

./: .gitignore  Cargo.toml  README.md  scss_build.sh  tsx_build.sh
src/: lib.rs  router.rs
static/lib/bmbp/: bmbp.css
web/scss/: bmbp.scss
web/static/lib/: http.js
web/static/lib/bmbp/: bmbp.css
web/tsx/: http.tsx
