[package]
name = "bmbp_lib_ui"
version = "0.1.2"
edition = "2021"
authors = ["bmbp<rs_bmbp.163.com>"]
description = "BMBP TERA CONTEXT VARS"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/bmbper/bmbp_lib_ui"
repository = "https://github.com/bmbper/bmbp_lib_ui"
documentation = "https://github.com/bmbper/bmbp_lib_ui"
[dependencies]
rust-embed = "8.5.0"
salvo = {version="0.71.1", features = ["serve-static"] }
